fix(configs): Actually fix layout issues
* Actually fix layout issues when a map is in an array

* Add more config entries

* Surround the string with quotes when appropriate

* Remove the old ConfigItem component

--- a/src/styles/docs.css
+++ b/src/styles/docs.css
@@ -218,3 +218,8 @@ starlight-file-tree .comment {
     color: var(--sl-color-accent-high);
     text-decoration: underline;
 }
+
+.config-description-container ul {
+    padding-left: 1rem;
+    list-style: disc;
+}
